ProdIND/ProdPrograms/force-app/main/default/objects/Cattle_Information__c/Cattle_Information__c.object-meta.xml
<CustomObject>
    <label>Cattle Information</label>
    <nameField>
        <displayFormat>CI-{00000}</displayFormat>
        <label>Cattle Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cattle Informations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>