ProdIND/ProdPrograms/force-app/main/default/objects/Cattle_Information__c/fields/Cattle_Name__c.field-meta.xml
<CustomField>
    <fullName>Cattle_Name__c</fullName>
    <label>Cattle Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BUFFALO</fullName>
            </value>
            <value>
                <fullName>BULL</fullName>
            </value>
            <value>
                <fullName>COW</fullName>
            </value>
            <value>
                <fullName>GOAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>