ProdIND/ProdPrograms/force-app/main/default/objects/Cattle_Information__c/fields/Field_Investigation__c.field-meta.xml
<CustomField>
    <fullName>Field_Investigation__c</fullName>
    <label>Field Investigation</label>
    <referenceTo>Field_Investigation__c</referenceTo>
    <relationshipLabel>Cattle Informations</relationshipLabel>
    <relationshipName>Cattle_Informations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>