ProdIND/ProdPrograms/force-app/main/default/objects/Cattle_Information__c/fields/Nos_of_Cattle__c.field-meta.xml
<CustomField>
    <fullName>Nos_of_Cattle__c</fullName>
    <label>Nos of Cattle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>